# work-boots

./: .env.example  .gitignore  LICENSE.md  Procfile  README-issue-automation.md  README.md  alembic.ini  local.db.legacy  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
app/: main.py
docs/: README.md  api.md  architecture.md  automation.md  business-outcomes.md  competitors.md  dashboard.md  data-model.md  debugging.md  deployment-configuration-contract.md  deployment-gke-cicd.md  gcp-github-actions-bootstrap.md  gcp-github-actions-deployment-prerequisites.md  gcp-workload-identity.md  google-integration.md  lead-intake-engine-api.md  lead-intake-engine-data-model.md  lead-intake-engine.codex.md  lead-intake-engine.md  lead-intake-flow.md  mvp-scope.md  operator-guide.md  operator-ui-and-google-auth.md  phase3-response-and-reminders.md  phase4-notifications-and-hardening.md  phase4-platform-operationalization-roadmap.md  phase4-runtime-validation-runbook.md  prompt-system.md  recommendations.md  security-architecture.md  security.md  seo-ai-phase1-audit-hardening.md  seo-ai-phase1-implementation-checklist.md  seo-ai-phase2-api.md  seo-ai-phase2-competitor-intelligence.md  seo-ai-phase2-data-model.md  seo-ai-phase2-implementation-checklist.md  seo-ai-phase2a-foundations-summary.md  seo-ai-phase2b-deterministic-comparison-summary.md  seo-ai-phase3a-api.md  (+11 more)
frontend/: README.md
k8s/: api-deployment.yaml  api-migration-baseline-job.yaml  api-migration-job.yaml  api-seo-competitor-profile-retention-cronjob.yaml  api-service.yaml  api-serviceaccount.yaml  bootstrap-admin-job.yaml  namespace.yaml  ui-deployment.yaml  ui-service.yaml
scripts/: bootstrap_gcp_github_actions.sh  create_issues.ps1  (+5 more)
(+529 files in other folders)
